<resources>
    <!--general-->
    <string name="app_name">speaktoo</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Enter your email address</string>
    <string name="password_hint">Enter your current password</string>
    <string name="confirm_password_hint">Re-enter password</string>
    <string name="forgot_password_hint">We will send you an email to set or reset your new password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_new_username">Enter your new username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_log_in">Log In</string>
    <string name="action_register">Sign Up</string>
    <string name="action_submit">Submit</string>
    <string name="action_to_log_in">Go to login</string>
    <string name="action_change_username">Change Username</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_continue_learning">Continue Learning</string>
    <string name="text_username">Username :</string>
    <string name="text_email">Email :</string>
    <string name="text_score">Score :</string>
    <string name="text_correct_words">Correct Words :</string>
    <string name="text_misspelled_words">Misspelled or Missing Words :</string>
    <string name="record_time_hint">You have 15 seconds to record your spelling</string>
    <string name="level_up">Time to level up to</string>

    <!--levels-->
    <string name="text_level_beginner">Beginner</string>
    <string name="text_level_intermediate">Intermediate</string>
    <string name="text_level_advance">Advance</string>

    <!--main page-->
    <string name="main_title">SPEAKTOO</string>
    <string name="main_desc">Your English Pronunciation Partner</string>

    <!--login page-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title_text">Welcome to Speaktoo</string>
    <string name="login_desc_text">Login to access your account</string>

    <!--register page-->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_failed">"Register Failed"</string>
    <string name="register_title_text">Create an account</string>
    <string name="register_desc_text">Create a new account</string>

    <!--register successful-->
    <string name="title_register_successful">Register Successful !</string>
    <string name="desc_register_successful">Please login to Speaktoo again with your new account</string>

    <!--forgot pass page-->
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="forgot_password_title_text">Forgot Password ?</string>

    <!--reset password page-->
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="reset_password_title_text">New Password</string>

    <!--password successful-->
    <string name="password_successful_title_text">Reset Successful !</string>
    <string name="password_successful_desc_text">Please login to Speaktoo again with your new password</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--new username-->
    <string name="title_new_username">New Username</string>

    <!--nav-->
    <string name="title_nav_home">Home</string>
    <string name="title_nav_profile">Profile</string>
    <string name="title_nav_milestone">Milestone</string>
    <string name="title_nav_start_level">StartLevel</string>

    <!--home fragment-->
    <string name="title_home_welcome">Welcome,</string>
    <string name="title_home_level">Level</string>
    <string name="text_language_level">Language Level</string>

    <!--questionnaire fragment-->
    <string name="title_questionnaire">How would you rate your overall English language ability?</string>
    <string name="text_beginner_questionnaire">Beginner (I am just starting to learn and need a lot of help)</string>
    <string name="text_intermediate_questionnaire">Intermediate (I understand and speak a little, but still need practice)</string>
    <string name="text_advance_questionnaire">Advanced (I can speak and understand English well)</string>

    <!--start level fragment-->
    <string name="text_start_level">Your English Level Is</string>
    <string name="action_start_learning">Start Learning</string>

    <!--profile fragment-->
    <string name="title_profile">Profile</string>

    <!--milestone fragment-->
    <string name="title_milestone">Milestone</string>
    <string name="text_milestone_progress">Your Progress</string>
    <string name="text_milestone_history">Practice History</string>

    <!--practice fragment-->
    <string name="title_feedback">Feedback:</string>
    <string name="action_generate_feedback">Generate Feedback</string>
</resources>