<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.speaktoo.ui.home.HomeFragment"
        android:label="@string/title_nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.speaktoo.ui.profile.ProfileFragment"
        android:label="@string/title_nav_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_milestone"
        android:name="com.example.speaktoo.ui.milestone.MilestoneFragment"
        android:label="@string/title_nav_milestone"
        tools:layout="@layout/fragment_milestone" />
</navigation>