<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:background="#E3EFE2"
    tools:context=".ui.fragments.profile.ProfileFragment">

    <TextView
        android:id="@+id/title_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <LinearLayout
        android:id="@+id/image_container"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:background="@drawable/background_circle"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/title_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/background_profile_pic" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_rounded"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/image_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/text_username"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/text_email"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/prompt_username"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_username"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/prompt_email"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toEndOf="@id/text_username" />

        <Button
            android:id="@+id/change_username_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="#219D57"
            android:text="@string/action_change_username"
            android:textColor="@drawable/text_dark_color"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toEndOf="@id/change_password_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/change_password_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="#219D57"
            android:text="@string/action_change_password"
            android:textColor="@drawable/text_dark_color"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/change_username_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_green"
        android:text="@string/action_log_out"
        android:textColor="@drawable/text_dark_color"
        app:layout_constraintTop_toBottomOf="@id/input_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>