<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:background="#E3EFE2"
    tools:context=".ui.fragments.home.HomeFragment">

    <TextView
        android:id="@+id/text_welcome_home"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:text="@string/title_home_welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_username_home"/>

    <TextView
        android:id="@+id/text_username_home"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:text="Name!"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_welcome_home"
        app:layout_constraintBottom_toTopOf="@id/user_level_container"/>

    <RelativeLayout
        android:id="@+id/user_level_container"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_username_home">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/title_home_level"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_user_level"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="Beginner"
            android:textStyle="italic"
            android:textSize="15sp"
            android:textColor="#219D57"/>
    </RelativeLayout>

    <Button
        android:id="@+id/button_continue_learning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/action_continue_learning"
        android:textSize="13sp"
        android:textColor="@drawable/text_dark_color"
        android:backgroundTint="#EE6F57"
        app:layout_constraintTop_toBottomOf="@id/user_level_container"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/image_container"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:padding="5dp"
        android:background="@drawable/background_circle"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/forgot_password_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/background_profile_pic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_level_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_rounded"
        android:padding="21dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_continue_learning"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_language_level"/>

        <GridView
            android:id="@+id/grid_levels"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:horizontalSpacing="15dp"
            android:verticalSpacing="15dp"
            android:numColumns="2" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
